src/objects/UC_Form__c.object
<CustomObject>
    <fields>
        <fullName>Action__c</fullName>
        <formula>HYPERLINK( 
Link__c &amp; &quot;&amp;sfucformid=&quot; &amp;  UC_Form_ID__c  &amp; &quot;&amp;sfuserid=&quot; &amp;  $User.User_ID_18_digit__c  , 
&quot;Edit UC Form&quot;, 
&quot;_Parent&quot;)</formula>
        <label>Action</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to UC Forms related to Cases</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>UC Forms</relationshipLabel>
        <relationshipName>UC_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DSI__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related DSI to this UC Form</description>
        <label>DSI</label>
        <referenceTo>DSI__c</referenceTo>
        <relationshipLabel>UC Forms</relationshipLabel>
        <relationshipName>UC_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Link__c</fullName>
        <label>Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>UC Forms</relationshipLabel>
        <relationshipName>UC_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
                <value>
                    <fullName>Case</fullName>
                </value>
                <value>
                    <fullName>DSI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UC_Form_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <label>UC Form ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UC_Form__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; Id, &quot;View&quot;, &quot;_Parent&quot;)</formula>
        <label>UC Form</label>
        <type>Text</type>
    </fields>
    <label>UC Form</label>
    <nameField>
        <displayFormat>U-{000000}</displayFormat>
        <label>UC Form Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>UC Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>